add repository link

--- a/JamiesonncResume/Pages/Shared/_Layout.cshtml
+++ b/JamiesonncResume/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             &copy; 2022 - Neal Christopher Jamieson
         </div>
         <div class="container">
-            I made this website myself, you can see it's source code at this GitHub repository: 
+            I made this website myself, you can see it's source code at th2 GitHub repository <a href="https://github.com/TheDrakonLord/JamiesonncResume">here</a>
         </div>
     </footer>
 
