--- a/JamiesonncResume/Pages/Index.cshtml
+++ b/JamiesonncResume/Pages/Index.cshtml
@@ -5,40 +5,46 @@
 }
 
 @section Styles {
-    <link href="~/index.cshtml.css" rel="stylesheet" type="text/css" />
+    <link href="~/export.cshtml.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="~/print.css" media="print" rel="stylesheet" type="text/css" />
 }
 
     <body>
         <div class="sidebar">
             <div class="sidebarTop">
                 <div class="nameBlock">
+                    <!--name and title information-->
                     <p class="name">@Model.resumeData.Name</p>
                     <p class="title">Software Engineer</p>
-                    <img class="profilePhoto" src="index.png" alt="Neal Jamieson" width="225" height="225"/>
+                    
                 </div>
+                        
+                <!--Contact information (email, phone, address, websites)-->
                 <div class="contactInfo">
-                    <p>@Model.resumeData.Email</p>
-                    <p>@Model.resumeData.Phone</p>
-                    <p>@Model.resumeData.Address.City, @Model.resumeData.Address.State</p>
-                    <p><a href="@Model.resumeData.Sites["LinkedIn"]" target="_blank">LinkedIn</a></p>
-                    <p></p><a href="@Model.resumeData.Sites["GitHub"]" target="_blank">GitHub</a></p>
+                    <p>@Model.resumeData.Email<br/>
+                    @Model.resumeData.Phone<br/>
+                    @Model.resumeData.Address.City, @Model.resumeData.Address.State<br/>
+                    <a href="@Model.resumeData.Sites["LinkedIn"]" target="_blank">LinkedIn</a><br/>
+                    <a href="@Model.resumeData.Sites["GitHub"]" target="_blank">GitHub</a></p>
 
                     
                 </div>
-                
+
             </div>
             <div class="education">
+                <!--display all education history-->
                 <h1>Education</h1>
                 @foreach (var x in Model.resumeData.EducationHistory)
             {
-                <p>@x.Major.type</p>
-                <p>@x.Major.field</p>
+                <p>@x.Major.type in @x.Major.field</p>
+                <p>Minor in @x.Minor</p>
                 <p>@x.Name</p>
-                <p>@x.StartDate.Year - @x.EndDate.Year</p>
-                <p>Nacogdoches, TX</p>
+                <p>Graduated @x.EndDate.ToString("MMM") @x.EndDate.Year</p>
+                <p>Nacogdoches, TX</p> <!--in a future update, relocate this to the XML file-->
             }
         </div>
         <div class="skills">
+            <!--display a list of all skills-->
             <h1>Skills</h1>
             @foreach (var x in Model.resumeData.ProgLangSkills)
             {
@@ -54,14 +60,16 @@
             }
         </div>
         <div class="securityClearance">
+            <!--display a list of all security clearances-->
             <h1>Clearance</h1>
             @foreach (var item in Model.resumeData.Clearances)
             {
                 <h4>@item.Name</h4>
-                 <p>@item.StartDate.ToString("MMM") @item.StartDate.Year - @item.EndDate.ToString("MMM") @item.EndDate.Year</p>
+                <p>@item.StartDate.ToString("MMM") @item.StartDate.Year - @item.EndDate.ToString("MMM") @item.EndDate.Year</p>
             }
         </div>
         <div class="volunteer">
+            <!--display a list of all volunteer experiences-->
             <h1>Volunteer Experience</h1>
             @foreach (var item in Model.resumeData.VolunteerHistory)
             {
@@ -73,11 +81,15 @@
 
     <div class="content">
         <div class="workExperience">
+            <!--display a list of all work experiences-->
             <h1>Work Experience</h1>
+            <!--load the profile photo here so that it is displayed on the right hand side of the screen-->
+            <img class="profilePhoto" src="index.png" alt="Neal Jamieson" /> 
             @foreach (var experience in Model.resumeData.WorkHistory)
             {
                 <h2>@experience.Title</h2>
                 <h3>@experience.Name</h3>
+                <!--list all assignments associated with the work experience-->
                 @foreach (var assignment in experience.Assignments)
                 {
                     <h4>@assignment.Name</h4>
@@ -92,8 +104,9 @@
                 }
             }
         </div>
-        
+
         <div class="awards">
+            <!--list all awards-->
             <h1>Awards</h1>
             @foreach (var item in Model.resumeData.Awards)
             {
@@ -102,6 +115,10 @@
                 <p>@item.Description</p>
             }
         </div>
-        
+
     </div>
 </body>
+<!--display a footer, this will need to be removed when exporting as a PDF-->
+<footer class="exportFooter">
+    <p>this resume was created from scratch as a website using ASP.net Core. You can view its source code here: <a href="https://github.com/TheDrakonLord/JamiesonncResume">https://github.com/TheDrakonLord/JamiesonncResume</a></p>
+</footer>
